--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Simple webpack project template",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -20,7 +23,12 @@
   },
   "homepage": "https://github.com/lmachens/webpack-template#readme",
   "devDependencies": {
+    "css-loader": "^5.0.0",
+    "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.1.3",
-    "webpack-cli": "^4.1.0"
-  }
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {}
 }
